# Dual-Arm-Robot

dual_arm_bringup/: CMakeLists.txt  package.xml
dual_arm_bringup/launch/: dual_arm_launch.py
dual_arm_moveit_config/: .setup_assistant  package.xml
dual_arm_moveit_config/config/: dual_arms.ros2_control.xacro  dual_arms.srdf  dual_arms.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  panda_macro.xacro  right_initial_positions.yaml  ros2_controllers.yaml
dual_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dual_arm_moveit_config_iiwa/: .setup_assistant  CMakeLists.txt  package.xml
dual_arm_moveit_config_iiwa/config/: dual_arm_iiwa.urdf.xacro  iiwa7_description.xacro  iiwa_dual_arm.srdf  lbr_controllers.yaml  moveit.rviz  moveit_controllers.yaml
dual_arm_moveit_config_iiwa/launch/: move_group.launch.py  starter.launch.py
iiwa_description/: CMakeLists.txt  package.xml
iiwa_description/ros2_control/: lbr_system_interface.xacro
iiwa_description/urdf/iiwa7/: dual_arm_iiwa.xacro  iiwa7.xacro  iiwa7_description.xacro
move_program/: CMakeLists.txt  package.xml
move_program/src/: move_program.cpp
panda_description/: CMakeLists.txt
panda_description/urdf/: dual_arms.urdf.xacro  panda_macro.xacro
